# sako

./: .gitignore  .gitmodules  CMakeLists.txt  MyTest.xlsx  _o_.hpp  a.cpp  a.txt  b.cpp  c.cpp  compile_flags.txt  demo.cpp  draw.hpp  draw_string.hpp  e.cpp  g.cpp  g.link_flags.txt  git.cpp  git.h  git.hpp  git_.hpp  gr  gui.cpp  gui.link_flags.txt  json.gr  lift.hpp  loop.hpp  lr.h  lr.hpp  m.hpp  main copy.cpp  main.cpp  main.hpp  nt.h  ntskills.h  ob.hpp  oset.cpp  overloaded.h  p.cpp  parsec.hpp  pin.hpp  (+14 more)
MyTest.xlsx/: [Content_Types].xml
MyTest.xlsx.content/docProps/: app.xml
MyTest.xlsx.content/xl/: sharedStrings.xml
MyTest.xlsx.content/xl/_rels/: workbook.xml.rels
MyTest.xlsx.content/xl/worksheets/: sheet1.xml
MyTest.xlsx.org/docProps/: core.xml
MyTest.xlsx/xl/: workbook.xml
example/: accumulate_ints  comprehensions.cpp  filter_transform
include/: newtype.hpp  ntskills.hpp  overloaded.hpp  union.hpp
lalr/: a.cpp  c.cpp  c2.cpp  calc.y  first.hpp  g41.hpp  g42.hpp  g43.hpp  l.y  l41.y  lemon.c  list_piths.hpp  mb.hpp  olr.cpp  terminals.hpp
test/: main.cpp  oset.cpp  oset.hpp
